V3 в процессе внедряю виртуальные потоки